--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,10 @@
       <groupId>org.springframework.boot</groupId>  
       <artifactId>spring-boot-starter-data-rest</artifactId> 
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
+    </dependency>
     <dependency> 
       <groupId>org.springframework.boot</groupId>  
       <artifactId>spring-boot-starter-test</artifactId>  
@@ -47,6 +51,11 @@
       <groupId>io.jsonwebtoken</groupId>
       <artifactId>jjwt</artifactId>
       <version>0.9.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.thymeleaf</groupId>
+      <artifactId>thymeleaf-spring5</artifactId>
+      <version>3.0.12.RELEASE</version>
     </dependency>
     <dependency>
       <groupId>org.thymeleaf.extras</groupId>
