--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,6 @@ spring.jpa.show-sql=true
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
+logging.level.org.springframework.security=DEBUG
 
 jwt.secret=lancerstpp
