--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "4.0.3",
+    "reactjs-popup": "^2.0.5",
     "reactstrap": "^9.0.1",
     "rest": "^2.0.0",
     "web-vitals": "^1.1.2",
